<resources>
    <string name="app_name">By Delos</string>
    <string name="link_time_out">连接超时，请重试</string>
    <string name="account_setting">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="permission_hint_default">如果该没有权限，将影响您的正常使用</string>
    <string name="progress_login">正在登录中，请稍候...</string>
    <string name="progress_loading">数据加载中</string>
    <string name="progress_register">正在注册中，请稍候...</string>
    <string name="progress_request">数据加载中...</string>
    <string name="progress_loading_pic">图片加载中</string>
    <string name="progress_uploading">正在上传，请稍候...</string>
    <string name="progress_downloading">正在下载，请稍候...</string>
    <string name="progress_public">正在发布，请稍候...</string>
    <string name="progress_auth">正在授权，请稍候...</string>
    <string name="login_username_hint">手机号</string>
    <string name="login_password_hint">密\t\t\t码</string>
    <string name="login_btn_text">登\t\t录</string>
    <string name="login_register">注册</string>
    <string name="login_error_text">登录遇到的问题？</string>
    <string name="login_show_declare">版权所有：博耳智能家居？</string>
    <string name="register_title_text">注册</string>
    <string name="register_phone">手机号：</string>
    <string name="register_verification_code">验证码：</string>
    <string name="register_get_verification_code">获取验证码</string>
    <string name="register_password">密码：</string>
    <string name="register_pass_description">密码由6-16位字符组成，区分大小写</string>
    <string name="register_already_read">我已阅读</string>
    <string name="register_use_protocol">《用户协议》</string>
    <string name="register_btn_text">注\t册</string>
    <string name="title_Agreement">用户协议</string>
    <string name="register_success">注册成功</string>
    <string name="password_mode">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_-!@#$%*&amp;</string>
    <string name="login_error_title_text">登录遇到问题</string>
    <string name="login_error_retrieve_pass">密码找回</string>
    <string name="login_error_service_phone">客服电话：400-802-0253</string>
    <string name="retrieve_pass_title_text">手机密码找回</string>
    <string name="retrieve_pass_phone">请填写您注册的手机号</string>
    <string name="retrieve_pass_verification_code">验证码</string>
    <string name="retrieve_pass_send_again">重新发送</string>
    <string name="retrieve_pass_commit">提交</string>
    <string name="reset_pass_title_text">重置密码</string>
    <string name="reset_pass_old_pass">旧密码</string>
    <string name="reset_pass_new_pass">新密码</string>
    <string name="reset_pass_old_security_code">旧安全码</string>
    <string name="reset_pass_new_security_code">新安全码</string>
    <string name="reset_pass_description">密码由6-16位字符组成，区分大小写</string>
    <string name="reset_pass_confirm">确定</string>
    <string name="reset_input_pass">请输入新密码</string>
    <string name="login_select_title">选择登录</string>
    <string name="login_select_first_title">主机直连登录</string>
    <string name="login_select_first_description">主机直连登录请确保手机与主机在同一局域网</string>
    <string name="login_select_second_title">家人申请登录</string>
    <string name="login_select_second_description">通过家人注册的手机号发送申请登录</string>
    <string name="homepage_lalala">啦啦啦</string>
    <string name="homepage_comfort_live">舒适生活</string>
    <string name="homepage_home_security">家庭安全</string>
    <string name="homepage_health_live">健康生活</string>
    <string name="homepage_green_live">绿色生活</string>
    <string name="homepage_batch_add">批量添加</string>
    <string name="homepage_text">首页</string>
    <string name="homepage_device_manage">设备管理</string>
    <string name="homepage_area_manage">区域管理</string>
    <string name="homepage_system_settings">系统设置</string>
    <string name="homepage_link_manage">联动管理</string>
    <string name="homepage_personal_center">个人中心</string>
    <string name="homepage_blood_pressure">血压</string>
    <string name="homepage_blood_glucose">血糖</string>
    <string name="homepage_weight">体重</string>
    <string name="homepage_blood_glucose_value">mmol/L</string>
    <string name="homepage_blood_pressure_value">mmHg</string>
    <string name="homepage_weight_value">kg</string>
    <string name="homepage_electricity">电</string>
    <string name="homepage_current_power">当前功率：%skw</string>
    <string name="homepage_now">当前</string>
    <string name="homepage_degrees">%s度</string>
    <string name="homepage_packaging">惊喜正在包装中...</string>
    <string name="homepage_model_select">模式选择</string>
    <string name="homepage_intelligent_lock">智能门锁</string>
    <string name="homepage_kitchen">厨房</string>
    <string name="homepage_study">书房</string>
    <string name="homepage_tea_room">茶水房</string>
    <string name="homepage_dining_room">餐厅</string>
    <string name="homepage_sick_room">病房</string>
    <string name="homepage_office">办公室</string>
    <string name="homepage_add"></string>
    <string name="home_apply_title">家人申请</string>
    <string name="home_apply_content">您是否通过家人%s的控制申请</string>
    <string name="home_apply_disagree_btn">不同意</string>
    <string name="home_apply_agree_btn">同意</string>
    <string name="push_message_title">消息推送</string>
    <string name="gateway_hint_message">当前主机不可用，请检查主机状态</string>
    <string name="no_permission">你没有此权限，请联系主机管理员</string>
    <string name="gas_test_title">气体检测</string>
    <string name="scan_hint">请将设备和手机连接在一个路由器下</string>
    <string name="bind_wifi_link_name">主机绑定</string>
    <string name="gateway_popup_title">温馨提示</string>
    <string name="gateway_popup_content">是否向主机管理员%s申请</string>
    <string name="gateway_popup_cancel">取消</string>
    <string name="gateway_popup_apply">申请</string>
    <string name="family_apply_phone_hint">管理员手机号</string>
    <string name="family_apply_contact_btn">通讯录</string>
    <string name="family_apply_content_hint">不说些什么吗</string>
    <string name="family_apply_send_btn">发送申请</string>
    <string name="scene_manage">区域管理</string>
    <string name="scene_manage_auto"> auto </string>
    <string name="scene_manage_office">办公室</string>
    <string name="scene_manage_tearoom">茶水间</string>
    <string name="scene_manage_diningroom"> 餐厅 </string>
    <string name="scene_manage_add"> 添加 </string>
    <string name="living_room"> 客厅 </string>
    <string name="master_bedroom"> 主卧 </string>
    <string name="bedroom"> 次卧 </string>
    <string name="kitchen"> 厨房 </string>
    <string name="study"> 书房 </string>
    <string name="dining_room"> 餐厅 </string>
    <string name="bath_room"> 卫生间 </string>
    <string name="office"> 办公室 </string>
    <string name="tea_room"> 茶水间 </string>
    <string name="boardroom"> 会议室 </string>
    <string name="guest_room"> 客房 </string>
    <string name="sick_room"> 病房 </string>
    <string name="general_manager"> 总经理 </string>
    <string name="icu"> ICU </string>
    <string name="vip_sickroom"> VIP病 </string>
    <string name="vip_guest"> VIP客 </string>
    <string name="model_text_1">新增</string>
    <string name="model_text_2">新增</string>
    <string name="model_text_3">新增</string>
    <string name="model_text_4">新增</string>
    <string name="manager_camera">监控控制</string>
    <string name="popup_scene_edit_title">房间编辑</string>
    <string name="popup_scene_add_title">新建场景</string>
    <string name="popup_room_add_title">新建房间</string>
    <string name="popup_room_add_area">添加区域</string>
    <string name="popup_scene_custom_name">自定义房间名称(最多6个字)</string>
    <string name="popup_scene_button_cancel">取消</string>
    <string name="popup_scene_button_ok">确定</string>
    <string name="scene_edit_delete_title">删除选中房间</string>
    <string name="scene_edit_hint">提示:删除房间时也会删除该房间中所有区域和区域中的设备</string>
    <string name="delete_sucess">删除成功</string>
    <string name="select_device_title">选择设备</string>
    <string name="rebind">重新绑定</string>
    <string name="select_device_delete">删除</string>
    <string name="living_room_title">客厅</string>
    <string name="edit_button">编辑</string>
    <string name="finish_button">完成</string>
    <string name="temp">℃</string>
    <string name="indoor">室内</string>
    <string name="outdoor">室外</string>
    <string name="outdoor_temp">12℃</string>
    <string name="model_edit">模式编辑</string>
    <string name="room_model">房间模式</string>
    <string name="humidity">湿度:</string>
    <string name="humidity_data">20</string>
    <string name="air_quality">空气质量:</string>
    <string name="air_quality_data">良好</string>
    <string name="air_conditioner_control">空调控制</string>
    <string name="electric_manage">电源管理</string>
    <string name="music_control">背景音乐控制</string>
    <string name="center_stack_control">中控面板控制</string>
    <string name="lighting_control">照明控制</string>
    <string name="projectors">投影仪</string>
    <string name="curtain_title">窗帘控制</string>
    <string name="my_center_bind_mobile">绑定手机</string>
    <string name="my_center_alarm_mobile">报警手机号</string>
    <string name="add_alarm_phone">添加报警手机号</string>
    <string name="pop_change_admin">请选择新管理员</string>
    <string name="pop_change_admin_success">修改管理员成功</string>
    <string name="pop_change_admin_fail">修改管理员失败</string>
    <string name="modify_admin_code_fail">安全码修改成功</string>
    <string name="device_mode_activity_search_hint">请输入想查询的内容</string>
    <string name="input_alarm_phone">请输入报警电话</string>
    <string name="input_email">请输入要绑定的邮箱</string>
    <string name="error_password_form">密码格式不正确</string>
    <string name="login_out">退出确认</string>
    <string name="login_out_hint">确定要退出登录吗？</string>
    <string name="off_line">下线通知</string>
    <string name="off_line_hint1">你的账号于</string>
    <string name="off_line_hint2">在另外一台设备登录。</string>
    <string name="off_line_hint3">如非本人操作，则可能密码已泄露！</string>
    <string name="off_line_know">知道了</string>
    <string name="personal_data_title">个人资料</string>
    <string name="personal_data_user_name">用户名</string>
    <string name="personal_data_name">名字</string>
    <string name="personal_data_person_sign">个性签名</string>
    <string name="personal_data_user_message">签名</string>
    <string name="personal_data_person_sex">性别</string>
    <string name="personal_data_person_birthday">生日</string>
    <string name="personal_data_person_date">1965年10月12日</string>
    <string name="personal_data_person_constellation">星座</string>
    <string name="personal_data_person_constellation_desc">今天的恋爱运势相当不错，选个灯光美，气氛佳，装潢棋牌的场所，或许会得到对方善意的回应.而在礼物的挑选上，鲜花加上小卡片的温情攻势，最能打动情人的心，不妨尝试看看！</string>
    <string name="personal_data_person_height">身高</string>
    <string name="room_name">房间名称</string>
    <string name="device_type">设备类型</string>
    <string name="device_name">设备名称</string>
    <string name="area_type">区域类型</string>
    <string name="blood_press_danchun">单纯收缩期高血压</string>
    <string name="blood_press_num_dan"><![CDATA[高压>140或低压<90]]></string>
    <string name="third_blood_press">3级高血压</string>
    <string name="second_blood_press">2级高血压</string>
    <string name="first_blood_press">1级高血压</string>
    <string name="normal_value">正常高值</string>
    <string name="normal_blood_press">正常血压</string>
    <string name="low_blood_press">低血压</string>
    <string name="high_blood_180"><![CDATA[高压>180或低压<110]]></string>
    <string name="high_blood_179">高压160-179或低压100-109</string>
    <string name="high_blood_159">高压140-159或低压90-99</string>
    <string name="high_blood_139">高压120-139或低压80-89</string>
    <string name="high_blood_120">高压90-119或低压60-79</string>
    <string name="high_blood_90"><![CDATA[高压<90或低压<60]]></string>
    <string name="blood_press_tip">注：当收缩压和舒张压属于不同级别时，以较高为准</string>
    <string name="heart_precent">心率</string>
    <string name="blood_belong">属于</string>
    <string name="heart_fast">心动过速</string>
    <string name="over100"><![CDATA[>100]]></string>
    <string name="normal_heart">正常</string>
    <string name="below_100">60-100</string>
    <string name="heat_slow">心动过缓</string>
    <string name="below_60"><![CDATA[<60]]></string>
    <string name="setting_classify_tip">设备快捷方式优先级排序</string>
    <string name="setting_classify">类别</string>
    <string name="setting_drag">拖动</string>
</resources>