<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_top_bar"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:background="@color/blue_login_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            style="@style/link_plan_title_text"
            android:text="@string/room_name"/>
        <TextView
            style="@style/link_plan_title_text"
            android:text="@string/area_type"/>

        <TextView
            style="@style/link_plan_title_text"
            android:text="@string/device_name"/>
        <ImageView
            android:layout_marginRight="10dp"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_personal_center_more"/>

    </LinearLayout>
    <ListView
        android:id="@+id/lvChooseList"
        android:divider="@color/light_gray_line"
        android:dividerHeight="1dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <com.zhy.android.percent.support.PercentLinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="7%"
        app:layout_marginBottomPercent="1.8%"
        >
        <TextView
            android:id="@+id/tvCancel"
            android:background="@drawable/shape_link_model_cancel_btn_bg"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_width="0dp"
            app:layout_widthPercent="36.4%"
            android:layout_height="match_parent"
            android:text="@string/popup_scene_button_cancel"/>
        <TextView
            android:id="@+id/tvConfirm"
            app:layout_marginLeftPercent="9.4%"
            android:gravity="center"
            android:background="@drawable/shape_login_btn_bg"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_width="0dp"
            app:layout_widthPercent="36.4%"
            android:layout_height="match_parent"
            android:text="@string/popup_scene_button_ok"/>
    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>