<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_top_bar"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:background="@color/blue_login_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            style="@style/link_plan_title_text"
            android:text="@string/room_name"/>
        <TextView
            style="@style/link_plan_title_text"
            android:text="@string/device_type"/>

        <TextView
            style="@style/link_plan_title_text"
            android:text="@string/device_name"/>
        <ImageView
            android:layout_marginRight="10dp"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_personal_center_more"/>

    </LinearLayout>
    <ListView
        android:id="@+id/lvLinkPlanList"
        android:divider="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>