<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/normal_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_classify_tip" />
            </LinearLayout>


        <include layout="@layout/item_line"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:textSize="@dimen/normal_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting_classify" />

            <TextView
                android:textSize="@dimen/normal_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_drag" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/item_line"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
